--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,49 @@
-.App {
-  text-align: center;
+*{
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body{
+  background-color: #f7fafc
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.App{
+  padding: 0 30px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.Novo-Comentario{
+  border-radius: .5rem;
+  box-shadow: 0 10px 15px -3px rgba(0,0,0,-1), 0 4px 6px -2px rgba(0,0,0,0.05);
+  padding: 1rem;
+  background-color: #fff;
+}
+
+.Novo-Comentario h2{
+  margin: 0;
+}
+
+.Novo-Comentario input, .Novo-Comentario textarea{
+  width: 300px;
+  background-color: #fff;border: 1px solid rgb(161, 159, 159);
+  font-size: 1rem;
+  padding: .5rem 1rem;
+  margin: 1rem 0;
+  display: block;
+  border-radius: .5rem;
+}
+
+.Novo-Comentario textarea{
+  width: 100%;
+}
+
+.Novo-Comentario button{
+  background-color: rgb(37, 37, 128);
   color: white;
+  font-size: 1rem;
+  padding: 1rem;
+  border-radius: .5rem;
+  border: none;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Novo-Comentario button:hover{
+  background-color:rgb(92, 92, 156);
 }
